--- a/css/styles.css
+++ b/css/styles.css
@@ -88,24 +88,33 @@ font-family: 'Lato', sans-serif;
 .grid__item {
  display: inline-block;
  width: 33%;
+ gap: 10px
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
 }
 
 @media all and (max-width: 500px) {
   .grid {
     display: grid;
     grid-template-columns: 1fr;
+    gap: 10px
   }
 }
 @media all and (min-width: 500px) and (max-width: 750px){
   .grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 10px
   }
 }
 @media all and (max-width: 750px) {
   .grid {
     display: grid;
-    grid-gap: 10px;
+    gap: 10px
   }
   .grid__item:last-child {
     grid-column: auto / auto;
@@ -118,6 +127,7 @@ font-family: 'Lato', sans-serif;
   width: auto;
    min-height: auto;
    margin: 0;
+   gap: 10px
 }
 
 a:hover, a:focus {
